--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -42,10 +42,10 @@ image::ArchitectureDiagram.png[]
 
 The *_Architecture Diagram_* given above explains the high-level design of Horo. Given below is a quick overview of each component.
 
-`Main` has two classes called link:{repoURL}/src/main/java/seedu/address/Main.java[`Main`] and link:{repoURL}/src/main/java/seedu/address/MainApp.java[`MainApp`]. It is responsible for,
+`Main` consists of a class called `MainApp`. It is responsible for:
 
-* At app launch: Initializes the components in the correct sequence, and connects them up with each other.
-* At shut down: Shuts down the components and invokes cleanup method where necessary.
+- At app launch: Initializes the components in the correct sequence, and connects them up with each other.
+- At shut down: Shuts down the components and invokes cleanup method where necessary.
 
 `LogsCenter` is used by many classes to write log messages to Horo's log file.
 
@@ -69,12 +69,12 @@ They implement these listeners:
 The sections below give more details of each component.
 
 [[Design-UiManager]]
-=== UI component
+=== UI Component
 
 .Main structure of the UI Component
 image::UiClassDiagram.png[]
 
-*API* : link:{repoURL}/blob/master/src/main/java/seedu/address/ui/Ui.java[`Ui.java`]
+*API* : link:{repoURL}/blob/master/src/main/java/seedu/address/logic/UiManager.java[`UiManager.java`]
 
 The UI consists of a `MainWindow` that is contains 3 main view parts - `CalendarPanel`, `ListPanel`, `LogPanel`. It also holds several other UI parts e.g. `PopUpPanel` and `Command Box`. Every one of the UI classes will abstract from the abstract `UiPart` class.
 
@@ -412,17 +412,17 @@ It is immutable, and automatically creates deep copies of all events and tasks, 
 ==== EventSource
 
 An `EventSource` is a representation of an event in Horo.
-It has two required fields, and three optional fields:
+It is immutable. It has two required fields, and three optional fields:
 
 Required:
 
 . Description : Long description of the event
-. Start DateTime : The beginning of the event
+. Start `DateTime` : The beginning of the event
 
 Optional:
 
-. End DateTime : The end of the event, if the event has no end it is considered to be an instant in the timeline.
-. Reminder DateTime : When a reminder should be given to the user, used in the <<notification system>>.
+. End `DateTime` : The end of the event, if the event has no end it is considered to be an instant in the timeline.
+. Reminder `DateTime` : When a reminder should be given to the user, used in the <<notification system>>.
 . Tag(s) : User defined tags, which help in organizing the user's events.
 
 The `EventSourceBuilder` API provides a simple way for developers to create an `EventSource`.
@@ -438,7 +438,7 @@ EventSource e = EventSource.newBuilder("CS2103T Lecture", DateTime.now())
 ==== TaskSource
 
 A `TaskSource` is a representation of a task in Horo.
-It has one required field, and three optional fields:
+It is immutable. It has one required field, and three optional fields:
 
 Required:
 
@@ -446,8 +446,8 @@ Required:
 
 Optional:
 
-. Due DateTime : When the task should be due.
-. Reminder DateTime : When a reminder should be given to the user, used in the <<notification system>>.
+. Due `DateTime` : When the task should be due.
+. Reminder `DateTime` : When a reminder should be given to the user, used in the <<notification system>>.
 . Tag(s) : User defined tags, which help in organizing the user's tasks.
 
 The `TaskSourceBuilder` API provides a simple way for developers to create a `TaskSource`.
@@ -460,8 +460,22 @@ TaskSource t = TaskSource.newBuilder("Buy Groceries")
     .build();
 ----
 
+==== DateTime
+
+A `DateTime` is a representation of an instant of time, without timezone information.
+It is stored as the number of https://en.wikipedia.org/wiki/Unix_time[seconds from epoch]. It is immutable.
+
+The `DateTimeBuilder` API provides a simple way for developers to create a `DateTime`.
+For example, to create a `DateTime` representing `1st November 2019, 12:00PM (UTC)`:
+
+[source]
+----
+DateTime d = DateTime.newBuilder(1, 11, 2019, 12, 0, ZoneOffset.UTC)
+    .build();
+----
+
 [[Design-StorageManager]]
-=== Storage Component
+=== StorageManager Component
 
 The `StorageManager` is responsible for the saving and loading of Horo's Model to the external disk.
 
@@ -476,7 +490,7 @@ The `StorageManager` has four main functions:
 . Deserialize the model from JSON before passing it to `ModelManager`.
 
 For serialization and deserialization of the model, our team has decided to use the well known https://github.com/FasterXML/jackson[Jackson library].
-`EventSource`, `TaskSource` and their respective builders, have appropriate annotations to facilitate serialization and deserialization.
+`EventSource`, `TaskSource` and their respective builders, have appropriate annotations to facilitate serialization and deserialization of JSON.
 
 To give a more concrete example of how `StorageManager` saves the model, refer to the sequence diagram below of *adding a task* to Horo:
 
@@ -488,6 +502,7 @@ image::StorageManagerAddTaskSequenceDiagram.png[]
 This section describes some noteworthy details on how certain features are implemented.
 
 // tag::undoredo[]
+[[Design-UndoRedoManager]]
 === Undo/Redo feature
 ==== Implementation Details
 
@@ -589,6 +604,7 @@ image::CommitActivityDiagram.png[]
 // end::undoredo[]
 
 // tag::notification[]
+[[Design-NotificationManager]]
 === Notification System
 ==== Class Architecture
 .Class diagram for Notification System
