--- a/docs/team/coderstellaj.adoc
+++ b/docs/team/coderstellaj.adoc
@@ -1,4 +1,4 @@
-== Jin Shuyuan – Project Portfolio for treasurerPro (tP)
+= Jin Shuyuan – Project Portfolio for treasurerPro (tP)
 :site-section: ProjectPortfolio
 //:toc:
 :toc-title:
